--- a/groups.html
+++ b/groups.html
@@ -19,7 +19,10 @@
             <a>Other Groups</a>
         </nav>
         <main>
-    
+            <div class="main">
+                <h1>Your Groups</h1>
+                <p>Below are the events you have already joined. Click on one to dave and share your photos.</p>
+            </div>
             <div class="sidebar">
               <nav>
                 <ul>
@@ -29,10 +32,7 @@
                 </ul>
               </nav>
             </div>
-            <div class="main">
-                <h1>Your Groups</h1>
-                <h2>Below are the events you have already joined. Click on one to save and share your photos!</h2>
-            </div>
+            
 
 
 
