--- a/index.html
+++ b/index.html
@@ -19,33 +19,11 @@
             <a href="tags.html">Your Tags</a>
             <a href="groups.html">Your Groups</a>
         </nav>
-        <section class="hero"> <!--will be slideshow-->
-            <figure class="slide">
-                <img src="media/cake.JPG" alt="Birthday Cake"/>
-                <figcaption class="figcaption">
-                    <h1>Emily's Birthday</h1>
-                    <p>01.26.2025</p>
-                </figcaption>
-            </figure>
-        </section>
-        <aside>
-            <h1 class="page-title">Interactive Gallery</h1>
-            <p>You have been invited to share your photos from Emily's birthday party! Please add, save and share your photos below. </p>
-        </aside>
+        
         <main>
-            <article class="card">
-              <header class="card-header">
-                <img src="media/grace.JPG" alt="Grace">
-              </header>
-              <footer class="card-footer">
-                <div class="actions">
-                  <button title="Save" class="material-symbols-outlined">download</button>
-                  <button title="Tag" class="material-symbols-outlined">add</button>
-                  <button title="Like" class="material-symbols-outlined">recommend</button>
-                </div>
-              </footer>
-            </article>
+          <p>PICShare is an easy, fun way to share pictures with friends. Simply create/join a group, upload your photos, and save your friends'. Get started today!</p>
         </main>
+
         <footer class="site-footer">
             <p>&copy;2025 Emily Devereux</p>
          </footer>
