--- a/groups.html
+++ b/groups.html
@@ -32,6 +32,13 @@
                 </ul>
               </nav>
             </div>
+            <head>
+                <meta charset="UTF-8">
+                <meta name="viewport" content="width=device-width, initial-scale=1.0">
+                <title>Group Details</title>
+                <link rel="stylesheet" href="styles.css">
+            </head>
+           
             
 
 
