trying to fix index page

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Grid Gallery</title>
         <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght@200..300" rel="stylesheet" />
         <link rel="stylesheet" href="css/modnorm.min.css">
-        <link rel="stylesheet" href="css/groups.css">
+        <link rel="stylesheet" href="css/indexstyle.css">
     </head>
     
     <body>
@@ -21,6 +21,22 @@
         </nav>
         
         <main>
+            <section id="top picture" class="page-intro">
+                <div class="share-and-save-picture">
+                  <img src="media/index pictures/wed-abbyandjoe.JPG" alt="Abby and Joe at Wedding" />
+                </div>
+                <div class="share-and-save-text">
+                  <h2>SHARE & SAVE</h2>
+                </div>
+             </section>
+             <section id="bottom picture" class="page-intro">
+                <div class="like-and-tag-text">
+                  <h2>LIKE & TAG</h2>
+                </div>
+                <div class="like-and-tag-picture">
+                  <img src="media/index pictures/mug-w-me.JPG" alt="Friends at Mugs" />
+                </div>
+              </section>
           <p>PICShare is an easy, fun way to share pictures with friends. Simply create/join a group, upload your photos, and save your friends'. Get started today!</p>
         </main>
 
