--- a/groups.html
+++ b/groups.html
@@ -21,28 +21,27 @@
         <main>
             <div class="main">
                 <h1>Your Groups</h1>
-                <p>Below are the events you have already joined. Click on one to dave and share your photos.</p>
+                <p>Below are the events you have already joined. Click on one to share and save photos.</p>
             </div>
             <div class="sidebar">
               <nav>
                 <ul>
                   <li><a href="eventexample1.html">Emily's Birthday</a></li>
-                  <li><a href="#">Link 2</a></li>
-                  <li><a href="#">Link 3</a></li>
+                  <li><a href="eventexample2.html">Owens Band</a></li>
+                  <li><a href="eventexample1.html">Mugs Night</a></li>
+                  <li><a href="eventexample1.html">Pella Trip</a></li>
                 </ul>
               </nav>
             </div>
-            <head>
-                <meta charset="UTF-8">
-                <meta name="viewport" content="width=device-width, initial-scale=1.0">
-                <title>Group Details</title>
-                <link rel="stylesheet" href="styles.css">
-            </head>
-           
-            
-
-
-
+            <section id="Emilys-bday">
+                <h1>Emily's Birthday</h1>
+                <h2>01.26.25</h2>
+                <ul>
+                    <li>Members: ##</li>
+                    <li>Photos: ##</li>
+                </ul>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, sint. Itaque vitae iure ad repellat aperiam tempore aliquam vero porro deleniti! Ducimus, sit officiis et est suscipit numquam expedita fuga.</p>
+            </section>
         </main>
         <footer class="site-footer">
             <p>&copy;2025 Emily Devereux</p>
