--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </nav>
         
         <main>
-            <section id="top picture" class="page-intro">
+            <section id="top" class="page-intro">
                 <div class="share-and-save-picture">
                   <img src="media/index pictures/wed-abbyandjoe.JPG" alt="Abby and Joe at Wedding" />
                 </div>
@@ -29,7 +29,7 @@
                   <h2>SHARE & SAVE</h2>
                 </div>
              </section>
-             <section id="bottom picture" class="page-intro">
+             <section id="bottom" class="page-intro">
                 <div class="like-and-tag-text">
                   <h2>LIKE & TAG</h2>
                 </div>
@@ -37,7 +37,9 @@
                   <img src="media/index pictures/mug-w-me.JPG" alt="Friends at Mugs" />
                 </div>
               </section>
-          <p>PICShare is an easy, fun way to share pictures with friends. Simply create/join a group, upload your photos, and save your friends'. Get started today!</p>
+              <section id="info">
+                <p>PICShare is an easy, fun way to share pictures with friends. Every occasion deserves to be captured and now, with PICShare, those captured moments can be shared. To start, simply create an account. From there, you will be able to either create or join a preexisting group. Once you have your group, you can share your photos, see photos shared by your friends, and download your favorites. Get started today!</p>
+              </section>
         </main>
 
         <footer class="site-footer">
