tring to fix event pages, index and created page broken

--- a/eventexample1.html
+++ b/eventexample1.html
@@ -10,15 +10,14 @@
     </head>
     
     <body>
-        <nav id="main-nav" class="topnav">
-            <a class="logo" href="index.html">
-              PICShare - Friends and Photos
-            </a>
-            <a>Upload Image</a>
-            <a href="tags.html">Your Tags</a>
-            <a href="groups.html">Other Groups</a>
-            <!--didn't add part here-->
-        </nav>
+      <nav id="main-nav" class="topnav">
+        <a class="logo" href="index.html">
+          PICShare - Friends and Photos
+        </a>
+        <a href="pagenotfound.html">Upload Image</a>
+        <a href="pagenotfound.html">Your Tags</a>
+        <a href="groups.html">Your Groups</a>
+      </nav>
         <section class="hero"> <!--will be slideshow-->
             <figure class="slide">
                 <img src="media/cake.JPG" alt="Birthday Cake"/>
@@ -29,10 +28,7 @@
             </figure>
             <!--didn't add part here i think these will be additional pics for slide show-->
         </section>
-        <aside>
-            <h1 class="page-title">Interactive Gallery</h1>
-            <p>You have been invited to share your photos from Emily's birthday party! Please add, save and share your photos below. </p>
-        </aside>
+        <p class="description">You have been invited to share your photos from Emily's birthday party! Please add, save and share your photos below. </p>
         <main>
             <article class="card">
               <header class="card-header">
