--- a/eventexample2.html
+++ b/eventexample2.html
@@ -14,10 +14,9 @@
             <a class="logo" href="index.html">
               PICShare - Friends and Photos
             </a>
-            <a>Upload Image</a>
-            <a href="tags.html">Your Tags</a>
-            <a href="groups.html">Other Groups</a>
-            <!--didn't add part here-->
+            <a href="pagenotfound.html">Upload Image</a>
+            <a href="pagenotfound.html">Your Tags</a>
+            <a href="groups.html">Your Groups</a>
         </nav>
         <section class="hero"> <!--will be slideshow-->
             <figure class="slide">
