--- a/groups.html
+++ b/groups.html
@@ -12,12 +12,12 @@
     <body>
         <nav id="main-nav" class="topnav">
             <a class="logo" href="index.html">
-                <img src="media/logo-transparent-png.png" alt="PICShare Friends and Photos logo">
+              PICShare - Friends and Photos
             </a>
-            <a>Upload Image</a>
-            <a href="tags.html">Your Tags</a>
-            <a>Other Groups</a>
-        </nav>
+            <a href="pagenotfound.html">Upload Image</a>
+            <a href="pagenotfound.html">Your Tags</a>
+            <a href="groups.html">Your Groups</a>
+          </nav>
         <main>
             <div class="main">
                 <h1>Your Groups</h1>
