--- a/index.html
+++ b/index.html
@@ -14,15 +14,14 @@
             <a class="logo" href="index.html">
                 <img src="media/logo-transparent-png.png" alt="PICShare Friends and Photos logo">
             </a>
-            <a>Upload Image</a>
-            <a href="tags.html">Your Tags</a>
+            <a href="pagenotfound.html">Upload Image</a>
+            <a href="pagenotfound.html">Your Tags</a>
             <a href="groups.html">Your Groups</a>
         </nav>
         
         <main>
             <section id="info">
                 <h1>PICShare</h1>
-                <p>PICShare is an easy, fun way to share pictures with friends. Every occasion deserves to be captured and now, with PICShare, those captured moments can be shared. To start, simply create an account. From there, you will be able to either create or join a preexisting group. Once you have your group, you can share your photos, see photos shared by your friends, and download your favorites. Get started today!</p>
               </section>
             <section id="top" class="page-intro">
                 <div class="share-and-save-picture">
@@ -31,12 +30,12 @@
                   <img src="media/index pictures/gma.JPG" alt="Grandma at Wedding" />
                 </div>
                 <div class="share-and-save-text">
-                  <h2>SHARE & SAVE</h2>
+                  <p>PICShare is an easy, fun way to share pictures with friends. Every occasion deserves to be captured and now, with PICShare, those captured moments can be shared. </p>
                 </div>
              </section>
              <section id="bottom" class="page-intro">
                 <div class="like-and-tag-text">
-                  <h2>LIKE & TAG</h2>
+                  <p> To start, simply create an account. From there, you will be able to either create or join a preexisting group. Once you have your group, you can share your photos, see photos shared by your friends, and download your favorites. Get started today!</p>
                 </div>
                 <div class="like-and-tag-picture">
                   <img src="media/index pictures/mug-w-me.JPG" alt="Friends at Mugs" />
