Fixing groups page

--- a/groups.html
+++ b/groups.html
@@ -23,25 +23,28 @@
                 <h1>Your Groups</h1>
                 <p>Below are the events you have already joined. Click on one to share and save photos.</p>
             </div>
-            <div class="sidebar">
-              <nav>
-                <ul>
-                  <li><a href="eventexample1.html">Emily's Birthday</a></li>
-                  <li><a href="eventexample2.html">Owens Band</a></li>
-                  <li><a href="eventexample1.html">Mugs Night</a></li>
-                  <li><a href="eventexample1.html">Pella Trip</a></li>
-                </ul>
-              </nav>
-            </div>
-            <section id="Emilys-bday">
-                <h1>Emily's Birthday</h1>
-                <h2>01.26.25</h2>
-                <ul>
-                    <li>Members: ##</li>
-                    <li>Photos: ##</li>
-                </ul>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, sint. Itaque vitae iure ad repellat aperiam tempore aliquam vero porro deleniti! Ducimus, sit officiis et est suscipit numquam expedita fuga.</p>
+             <section class="photo-grid">
+              <div class="photo-item">
+                <a href="eventexample1.html">
+                  <img src="media/graceandemily.JPG" alt="Emily and Grace">
+                  <div class="overlay-text">Emily's Birthday</div>
+                </a>
+              </div>
+              <div class="photo-item">
+                <img src="media/owen/band.JPG" alt="Owens band">
+                <div class="overlay-text">Owens Show</div>
+              </div>
+              <div class="photo-item">
+                <img src="media/pella/flowersphoto.JPG" alt="Picture in Pella 3">
+                <div class="overlay-text">Tulip Time</div>
+              </div>
+              <div class="photo-item">
+                <img src="media/mugs/groupbench.JPG" alt="5 girls sitting on bench">
+                <div class="overlay-text">Mugs on Welch</div>
+              </div>
             </section>
+                
+            
         </main>
         <footer class="site-footer">
             <p>&copy;2025 Emily Devereux</p>
