--- a/groups.html
+++ b/groups.html
@@ -31,16 +31,22 @@
                 </a>
               </div>
               <div class="photo-item">
-                <img src="media/owen/band.JPG" alt="Owens band">
-                <div class="overlay-text">Owens Show</div>
+                <a href="eventexample2.html">
+                  <img src="media/owen/band.JPG" alt="Owen Band">
+                  <div class="overlay-text">Owens Performance</div>
+                </a>
               </div>
               <div class="photo-item">
-                <img src="media/pella/flowersphoto.JPG" alt="Picture in Pella 3">
-                <div class="overlay-text">Tulip Time</div>
+                <a href="eventexample3.html">
+                  <img src="media/pella/flowersphoto.JPG" alt="Picture in Pella 3">
+                  <div class="overlay-text">Tulip Time</div>
+                </a>
               </div>
               <div class="photo-item">
-                <img src="media/mugs/groupbench.JPG" alt="5 girls sitting on bench">
-                <div class="overlay-text">Mugs on Welch</div>
+                <a href="eventexample4.html">
+                  <img src="media/mugs/DSCN1221.JPG" alt="5 girls sitting on bench">
+                  <div class="overlay-text">Mugs on Welch</div>
+                </a>
               </div>
             </section>
                 
