--- a/eventexample3.html
+++ b/eventexample3.html
@@ -20,19 +20,19 @@
       </nav>
         <section class="hero"> <!--will be slideshow-->
             <figure class="slide">
-                <img src="media/owen/DSCN1150.JPG" alt="No flash"/>
+                <img src="media/pella/IMG_5700.jpeg" alt="Flowers"/>
                 <figcaption class="figcaption">
-                    <h1>Owens Band</h1>
-                    <p>04.17.2025</p>
+                    <h1>Tulip Time</h1>
+                    <p>04.26.2025</p>
                 </figcaption>
             </figure>
             <!--didn't add part here i think these will be additional pics for slide show-->
         </section>
-        <p class="description">You have been invited to share your photos from Owens band performance! Please add, save and share your photos below. </p>
+        <p class="description">You have been invited to share your photos from Tulip Time! Please add, save and share your photos below. </p>
         <main>
             <article class="card">
               <header class="card-header">
-                <img src="media/owen/band.JPG" alt="Band">
+                <img src="media/pella/3sitting.JPG" alt="Grass">
               </header>
               <footer class="card-footer">
                 <div class="actions">
@@ -44,7 +44,7 @@
             </article>
             <article class="card">
                 <header class="card-header">
-                  <img src="media/owen/dev.JPG" alt="Dev">
+                  <img src="media/pella/bakery1.JPG" alt="Bakery">
                 </header>
                 <footer class="card-footer">
                   <div class="actions">
@@ -56,7 +56,7 @@
               </article>
               <article class="card">
                 <header class="card-header">
-                  <img src="media/owen/greyson.JPG" alt="Picture with greyson">
+                  <img src="media/pella/flowers1.JPG" alt="Flowers">
                 </header>
                 <footer class="card-footer">
                   <div class="actions">
@@ -68,7 +68,7 @@
               </article>
               <article class="card">
                 <header class="card-header">
-                  <img src="media/owen/group.JPG" alt="Group photo">
+                  <img src="media/pella/walk.JPG" alt="Walk">
                 </header>
                 <footer class="card-footer">
                   <div class="actions">
@@ -80,7 +80,7 @@
               </article>
               <article class="card">
                 <header class="card-header">
-                  <img src="media/owen/joeroom.JPG" alt="Joe's roommates">
+                  <img src="media/pella/flowers2.JPG" alt="Flowers">
                 </header>
                 <footer class="card-footer">
                   <div class="actions">
@@ -92,7 +92,7 @@
               </article>
               <article class="card">
                 <header class="card-header">
-                  <img src="media/owen/laurandalissa.JPG" alt="Lauren and Alissa">
+                  <img src="media/pella/flowers3.JPG" alt="Flowers">
                 </header>
                 <footer class="card-footer">
                   <div class="actions">
@@ -104,7 +104,7 @@
               </article>
               <article class="card">
                 <header class="card-header">
-                  <img src="media/owen/lib.JPG" alt="Emily, Owen, and Gabi">
+                  <img src="media/pella/3sitting1.JPG" alt="Girls in the grass">
                 </header>
                 <footer class="card-footer">
                   <div class="actions">
@@ -116,7 +116,7 @@
               </article>
               <article class="card">
                 <header class="card-header">
-                  <img src="media/owen/mealissaandlaur.JPG" alt="3 Friends">
+                  <img src="media/pella/flowers3.JPG" alt="Flowers">
                 </header>
                 <footer class="card-footer">
                   <div class="actions">
@@ -128,7 +128,7 @@
               </article>
               <article class="card">
                 <header class="card-header">
-                  <img src="media/owen/meandgen.JPG" alt="Emily and Genna">
+                  <img src="media/pella/flowers4.JPG" alt="Flowers">
                 </header>
                 <footer class="card-footer">
                   <div class="actions">
@@ -140,7 +140,7 @@
               </article>
               <article class="card">
                 <header class="card-header">
-                  <img src="media/owen/meandowen.JPG" alt="Emily and Owen">
+                  <img src="media/pella/bakery2.JPG" alt="Bakery">
                 </header>
                 <footer class="card-footer">
                   <div class="actions">
@@ -152,7 +152,7 @@
               </article>
               <article class="card">
                 <header class="card-header">
-                  <img src="media/owen/owensitting.JPG" alt="Owen playing">
+                  <img src="media/pella/flowersphoto.JPG" alt="Photo of flowers">
                 </header>
                 <footer class="card-footer">
                   <div class="actions">
@@ -164,7 +164,7 @@
               </article>
               <article class="card">
                 <header class="card-header">
-                  <img src="media/owen/owenstanding.JPG" alt="Owen playing">
+                  <img src="media/pella/flowers5.JPG" alt="Flowers">
                 </header>
                 <footer class="card-footer">
                   <div class="actions">
