--- a/pagenotfound.html
+++ b/pagenotfound.html
@@ -23,7 +23,7 @@
         </figure>
         <section>
           <h1>Uh oh!</h1>
-          <h3><span>Coming Soon!</span> We are working hard to get this page up and running!</h3>
+          <h3>We are working hard to get this page up and running!</h3>
           <a class=home href="index.html"> Home</a>
         </section>
       </main>
