for real this time... last change

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UFT-8">
         <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
-        <title>Grid Gallery</title>
+        <title>PICShare</title>
         <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght@200..300" rel="stylesheet" />
         <link rel="stylesheet" href="css/modnorm.min.css">
         <link rel="stylesheet" href="css/indexstyle.css">
